refactored backend && auth endpoint