@@ -1,12 +1,10 @@
 package org.example.utils;
 
-import com.sun.net.httpserver.HttpExchange;
-import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
 public class Utils {
-    // Parsează query string în Map<String, String>
     public static Map<String, String> parseQuery(String query) {
         Map<String, String> result = new HashMap<>();
         if (query == null || query.isEmpty()) return result;
@@ -31,7 +29,7 @@ public class Utils {
     // Decodificare URL encoded (ex: %20 -> spațiu)
     private static String decode(String s) {
         try {
-            return java.net.URLDecoder.decode(s, "UTF-8");
+            return java.net.URLDecoder.decode(s, StandardCharsets.UTF_8);
         } catch (Exception e) {
             return s;
         }
